# milvus-dbpu-plugin

./: .gitignore  CMakeLists.txt  README.md
include/dbpu/: interceptor.h  logger.h  offload.h  profiler.h  runtime_loader.h
src/: interceptor.cpp  knowhere_hooks.cpp  logger.cpp  offload.cpp  profiler.cpp  runtime_loader.cpp
tests/: test_loader.cpp
